--- a/requirements.txt
+++ b/requirements.txt
@@ -4,73 +4,128 @@
 #
 #    pip-compile
 #
-ansible-lint==4.1.0       # via -r requirements.in, molecule
-ansible==2.8.8            # via -r requirements.in, ansible-lint, molecule
-anyconfig==0.9.7          # via molecule
-arrow==0.14.7             # via jinja2-time
-aspy.yaml==1.3.0          # via pre-commit
-atomicwrites==1.3.0       # via pytest
-attrs==19.1.0             # via packaging, pytest
-bcrypt==3.1.7             # via paramiko
-binaryornot==0.4.4        # via cookiecutter
-cerberus==1.3.1           # via molecule
-certifi==2019.6.16        # via requests
-cffi==1.12.3              # via bcrypt, cryptography, pynacl
-cfgv==2.0.1               # via pre-commit
-chardet==3.0.4            # via binaryornot, requests
-click-completion==0.5.1   # via molecule
-click==7.0                # via click-completion, cookiecutter, molecule, python-gilt
-colorama==0.4.1           # via molecule, python-gilt
-cookiecutter==1.6.0       # via molecule
-cryptography==3.2         # via ansible, paramiko
-entrypoints==0.3          # via flake8
-fasteners==0.15           # via python-gilt
-flake8==3.7.8             # via molecule
-future==0.17.1            # via cookiecutter
-git-url-parse==1.2.2      # via python-gilt
-identify==1.4.7           # via pre-commit
-idna==2.8                 # via requests
-importlib-metadata==0.20  # via pluggy, pre-commit, pytest
-jinja2-time==0.2.0        # via cookiecutter
-jinja2==2.10.1            # via ansible, click-completion, cookiecutter, jinja2-time, molecule
-markupsafe==1.1.1         # via jinja2
-mccabe==0.6.1             # via flake8
-molecule==2.22            # via -r requirements.in
-monotonic==1.5            # via fasteners
-more-itertools==5.0.0     # via pytest, zipp
-nodeenv==1.3.3            # via pre-commit
-packaging==19.1           # via pytest
-paramiko==2.6.0           # via molecule
-pathspec==0.5.9           # via yamllint
-pbr==5.4.3                # via git-url-parse, python-gilt
-pexpect==4.7.0            # via molecule
-pluggy==0.12.0            # via pytest
-poyo==0.5.0               # via cookiecutter
-pre-commit==1.18.3        # via molecule
-psutil==5.6.6             # via molecule
-ptyprocess==0.6.0         # via pexpect
-py==1.8.0                 # via pytest
-pycodestyle==2.5.0        # via flake8
-pycparser==2.19           # via cffi
-pyflakes==2.1.1           # via flake8
-pynacl==1.3.0             # via paramiko
-pyparsing==2.4.2          # via packaging
-pytest==4.6.5             # via testinfra
-python-dateutil==2.8.0    # via arrow
-python-gilt==1.2.1        # via molecule
-pyyaml==5.1.2             # via ansible, ansible-lint, aspy.yaml, molecule, pre-commit, python-gilt, yamllint
-requests==2.22.0          # via cookiecutter
-ruamel.yaml==0.16.5       # via ansible-lint
-sh==1.12.14               # via molecule, python-gilt
-shellingham==1.3.1        # via click-completion
-six==1.12.0               # via ansible-lint, bcrypt, cfgv, click-completion, cryptography, fasteners, molecule, more-itertools, packaging, pre-commit, pynacl, pytest, python-dateutil, testinfra
-tabulate==0.8.3           # via molecule
-testinfra==3.1.0          # via molecule
-toml==0.10.0              # via pre-commit
-tree-format==0.1.2        # via molecule
-urllib3==1.25.3           # via requests
-virtualenv==16.7.5        # via pre-commit
-wcwidth==0.1.7            # via pytest
-whichcraft==0.6.0         # via cookiecutter
-yamllint==1.17.0          # via molecule
-zipp==0.6.0               # via importlib-metadata
+ansible-core==2.11.1
+    # via ansible
+ansible-lint==5.0.12
+    # via
+    #   -r requirements.in
+    #   molecule
+ansible==4.1.0
+    # via -r requirements.in
+arrow==1.1.0
+    # via jinja2-time
+bcrypt==3.2.0
+    # via paramiko
+binaryornot==0.4.4
+    # via cookiecutter
+bracex==2.1.1
+    # via wcmatch
+cerberus==1.3.2
+    # via molecule
+certifi==2021.5.30
+    # via requests
+cffi==1.14.5
+    # via
+    #   bcrypt
+    #   cryptography
+    #   pynacl
+chardet==4.0.0
+    # via
+    #   binaryornot
+    #   requests
+click-help-colors==0.9
+    # via molecule
+click==8.0.1
+    # via
+    #   click-help-colors
+    #   cookiecutter
+    #   molecule
+colorama==0.4.4
+    # via rich
+commonmark==0.9.1
+    # via rich
+cookiecutter==1.7.3
+    # via molecule
+cryptography==3.4.7
+    # via
+    #   ansible-core
+    #   paramiko
+enrich==1.2.6
+    # via
+    #   ansible-lint
+    #   molecule
+idna==2.10
+    # via requests
+jinja2-time==0.2.0
+    # via cookiecutter
+jinja2==3.0.1
+    # via
+    #   ansible-core
+    #   cookiecutter
+    #   jinja2-time
+    #   molecule
+markupsafe==2.0.1
+    # via jinja2
+molecule==3.3.4
+    # via -r requirements.in
+packaging==20.9
+    # via
+    #   ansible-core
+    #   ansible-lint
+    #   molecule
+paramiko==2.7.2
+    # via molecule
+pluggy==0.13.1
+    # via molecule
+poyo==0.5.0
+    # via cookiecutter
+pycparser==2.20
+    # via cffi
+pygments==2.9.0
+    # via rich
+pynacl==1.4.0
+    # via paramiko
+pyparsing==2.4.7
+    # via packaging
+python-dateutil==2.8.1
+    # via arrow
+python-slugify==5.0.2
+    # via cookiecutter
+pyyaml==5.4.1
+    # via
+    #   ansible-core
+    #   ansible-lint
+    #   molecule
+requests==2.25.1
+    # via cookiecutter
+resolvelib==0.5.4
+    # via ansible-core
+rich==10.4.0
+    # via
+    #   ansible-lint
+    #   enrich
+    #   molecule
+ruamel.yaml.clib==0.2.2
+    # via ruamel.yaml
+ruamel.yaml==0.17.9
+    # via ansible-lint
+six==1.16.0
+    # via
+    #   bcrypt
+    #   cookiecutter
+    #   pynacl
+    #   python-dateutil
+    #   tenacity
+subprocess-tee==0.3.2
+    # via molecule
+tenacity==7.0.0
+    # via ansible-lint
+text-unidecode==1.3
+    # via python-slugify
+urllib3==1.26.5
+    # via requests
+wcmatch==8.2
+    # via ansible-lint
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
